<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.AddBookActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_add_book"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/purple_200"
            app:popupTheme="@style/PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_app"
            android:orientation="vertical"
            android:padding="@dimen/add_book_content_padding">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:elevation="@dimen/card_view_elevation"
                app:cardCornerRadius="@dimen/card_view_corner_radius">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="@dimen/card_view_layout_content_padding">

                    <ImageView
                        android:id="@+id/iv_add_book"
                        android:layout_width="@dimen/book_image_width"
                        android:layout_height="@dimen/book_image_height"
                        android:contentDescription="@string/image"
                        android:src="@drawable/ic_book" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/add_book_til_marginTop">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/et_add_book_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/book_title"
                            android:inputType="text"
                            android:textSize="@dimen/et_text_size" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/add_book_til_marginTop">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/et_add_book_author"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/book_author"
                            android:inputType="text"
                            android:textSize="@dimen/et_text_size" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/add_book_til_marginTop">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/et_add_book_description"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/book_description"
                            android:inputType="textMultiLine"
                            android:textSize="@dimen/et_text_size" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/add_book_til_marginTop">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/et_add_book_isbn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/book_isbn"
                            android:inputType="number"
                            android:textSize="@dimen/et_text_size" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/add_book_til_marginTop">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/et_add_book_genre"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/book_genre"
                            android:inputType="text"
                            android:textSize="@dimen/et_text_size" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/add_book_til_marginTop">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/et_add_book_pages"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/book_pages"
                            android:inputType="number"
                            android:textSize="@dimen/et_text_size" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/add_book_til_marginTop">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/et_add_book_publish_year"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/book_publish_year"
                            android:inputType="number"
                            android:textSize="@dimen/et_text_size" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/btn_add_book_to_collection"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/add_book_btn_marginTop"
                        android:background="@drawable/shape_button"
                        android:foreground="?attr/selectableItemBackground"
                        android:gravity="center"
                        android:paddingTop="@dimen/btn_paddingTopBottom"
                        android:paddingBottom="@dimen/btn_paddingTopBottom"
                        android:text="@string/add_button"
                        android:textColor="@color/white"
                        android:textSize="@dimen/btn_text_size" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>