<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_my_books"
            android:icon="@drawable/ic_my_books"
            android:title="@string/nav_my_books">
        </item>

        <item
            android:id="@+id/nav_my_stats"
            android:icon="@drawable/ic_my_stats"
            android:title="@string/nav_my_stats">
        </item>

        <item
            android:id="@+id/nav_my_profile"
            android:icon="@drawable/ic_my_profile"
            android:title="@string/nav_my_profile">
        </item>

        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_sign_out"
            android:title="@string/nav_sign_out">
        </item>

    </group>
</menu>